--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout
+      uses: actions/checkout@v1
 
     - name: Set release mode
       if: startsWith(github.ref, 'refs/tags/')
-      run: echo "::set-env name=REF::$(echo $GITHUB_REF | sed "s:.*/::g")"
+      run: |
+        echo "::set-env name=REF::$(echo $GITHUB_REF | sed "s:.*/::g")"
+        echo "::set-env name=TIMESTAMP::$(date -u +%Y%m%d-%H%Mz)"
  
     - name: Set edge mode
       if: "!startsWith(github.ref, 'refs/tags/')"
