--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - main
   release:
     types:
       - published
@@ -15,19 +16,19 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
 
     - name: Set release mode
       if: startsWith(github.ref, 'refs/tags/')
       run: |
-        echo "::set-env name=REF::$(echo $GITHUB_REF | sed "s:.*/::g")"
-        echo "::set-env name=TIMESTAMP::$(date -u +%Y%m%d-%H%Mz)"
+        echo "REF=$(echo $GITHUB_REF | sed "s:.*/::g")" >> $GITHUB_ENV
+        echo "TIMESTAMP=$(date -u +%Y%m%d-%H%Mz)" >> $GITHUB_ENV
  
     - name: Set edge mode
       if: "!startsWith(github.ref, 'refs/tags/')"
       run: |
-        echo "::set-env name=REF::edge"
-        echo "::set-env name=TIMESTAMP::$(date -u +%Y%m%d-%H%Mz)"
+        echo "REF=edge" >> $GITHUB_ENV
+        echo "TIMESTAMP=$(date -u +%Y%m%d-%H%Mz)" >> $GITHUB_ENV
  
     - name: Build
       run: make
